# temp_score_predictor

./: .gitignore  README.md  main.py  nfl_stadium_locations.csv  odds.py  odds_response.json  posting_x.py  predictor.py  pyproject.toml  testing.ipynb  weather.py
get_odds/: odds.py  odds_response_2.json
post_x/: post_x.py
test/: test_predictor.py
weather/: weather.py
