[tool.poetry]
authors = ["Jaret Townsend <jtownsend198@gmail.com>"]
description = ""
name = "temp-score-predictor"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.10, <3.11" 
requests = "^2.32.3"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"